--- a/clickCounter.html
+++ b/clickCounter.html
@@ -5,8 +5,8 @@
 
     <body>
         <script src="js/сlickCounter.js" type="text/javascript"></script>
-        <button type="button" onclick="onClick()">Click here</button>
-        <p>Clicks: <a id="clicks">0</a></p>
+        <button type="button">Click here</button>
+        <p>Clicks: <a id="clicker">0</a></p>
 
     </body>
     
